# tazkirim-monitor

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: monitor.yml  schedule-trigger.yml
src/tazkirim_monitor/: __init__.py  __main__.py  browser.py  config.py  filters.py  notifier.py  search.py  state.py
