[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tazkirim-monitor"
version = "1.0.0"
description = "Monitor tazkirim.gov.il for EV/electricity legislation and notify via ntfy"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.44.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "python-dateutil>=2.9.0",
    "tzdata>=2024.1",
]

[project.scripts]
tazkirim-monitor = "tazkirim_monitor.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
